--- a/src/RedShot.Infrastructure.Formatting/RedShot.Infrastructure.Formatting.csproj
+++ b/src/RedShot.Infrastructure.Formatting/RedShot.Infrastructure.Formatting.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.5.6" />
+    <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
