--- a/src/RedShot.Infrastructure.Formatting/RedShot.Infrastructure.Formatting.csproj
+++ b/src/RedShot.Infrastructure.Formatting/RedShot.Infrastructure.Formatting.csproj
@@ -5,6 +5,13 @@
     <CodeAnalysisRuleSet>../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+    <DefineConstants>_WINDOWS</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
+    <DefineConstants>_UNIX</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.5.6" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
