--- a/src/RedShot.Infrastructure.Configuration/RedShot.Infrastructure.Configuration.csproj
+++ b/src/RedShot.Infrastructure.Configuration/RedShot.Infrastructure.Configuration.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NLog" Version="4.7.5" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
