--- a/src/RedShot.Infrastructure.Recording/RedShot.Infrastructure.Recording.csproj
+++ b/src/RedShot.Infrastructure.Recording/RedShot.Infrastructure.Recording.csproj
@@ -5,13 +5,6 @@
     <CodeAnalysisRuleSet>../../tools/Saritasa.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
-    <DefineConstants>_WINDOWS</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
-    <DefineConstants>_UNIX</DefineConstants>
-  </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.5.6" />
     <PackageReference Include="Saritasa.Tools.Common" Version="3.2.2" />
@@ -23,8 +16,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RedShot.Infrastructure.Configuration\RedShot.Infrastructure.Configuration.csproj" />
+    <ProjectReference Condition=" '$(OS)' != 'Windows_NT'" Include="..\RedShot.Infrastructure.Recording.Unix\RedShot.Infrastructure.Recording.Unix.csproj" />
+    <ProjectReference Condition=" '$(OS)' == 'Windows_NT'" Include="..\RedShot.Infrastructure.Recording.Windows\RedShot.Infrastructure.Recording.Windows.csproj" />
     <ProjectReference Include="..\RedShot.Infrastructure.Uploading\RedShot.Infrastructure.Uploading.csproj" />
-    <ProjectReference Condition=" '$(OS)' == 'Windows_NT' " Include="..\RedShot.Platforms.Windows\RedShot.Platforms.Windows.csproj" />
     <ProjectReference Include="..\RedShot.SkiaSharpControl\Eto.Forms.Controls.SkiaSharp\Eto.Forms.Controls.SkiaSharp.csproj" />
   </ItemGroup>
 
