--- a/src/RedShot.Infrastructure.Common/RedShot.Infrastructure.Common.csproj
+++ b/src/RedShot.Infrastructure.Common/RedShot.Infrastructure.Common.csproj
@@ -20,7 +20,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Eto.Forms" Version="2.5.10" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Saritasa.Tools.Common" Version="3.3.1" />
     <PackageReference Include="SkiaSharp" Version="2.80.2" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
