--- a/src/RedShot.Infrastructure.Uploading/RedShot.Infrastructure.Uploading.csproj
+++ b/src/RedShot.Infrastructure.Uploading/RedShot.Infrastructure.Uploading.csproj
@@ -13,6 +13,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="Saritasa.Tools.Common" Version="3.3.1" />
 	  <PackageReference Include="Eto.Forms" Version="2.5.10" />
 	  <PackageReference Include="FluentFTP" Version="33.0.3" />
