--- a/src/RedShot.Application/appsettings.json
+++ b/src/RedShot.Application/appsettings.json
@@ -1,5 +1,10 @@
 {
   "AppSettings": {
+    "GithubRepositoryDetails": {
+      "OwnerName": "ko-vasilev",
+      "RepositoryName": "CrmTelegramBot"
+    },
+    "ReleasesUrl": "https://github.com/ko-vasilev/CrmTelegramBot/releases",
     "Email": "redshot@saritasa.com",
     "FfmpegWindowsDownloadPath": "https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip",
     "FormatFileNameTag": "%"
