--- a/src/RedShot.Infrastructure/RedShot.Infrastructure.csproj
+++ b/src/RedShot.Infrastructure/RedShot.Infrastructure.csproj
@@ -14,6 +14,7 @@
   
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.7.7" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="Saritasa.Tools.Common" Version="3.3.1" />
     <PackageReference Include="Eto.Forms" Version="2.5.10" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
